dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongfields_2.stderr
error[E0277]: the trait bound `impl dfir_rs::futures::Sink<(u32,), Error = Infallible>: dfir_rs::futures::Sink<(f64,)>` is not satisfied
  --> tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^ the trait `dfir_rs::futures::Sink<(f64,)>` is not implemented for `impl dfir_rs::futures::Sink<(u32,), Error = Infallible>`
   |
   = help: the following other types implement trait `dfir_rs::futures::Sink<Item>`:
             `&dfir_rs::futures::futures_channel::mpsc::UnboundedSender<T>` implements `dfir_rs::futures::Sink<T>`
             `&mut S` implements `dfir_rs::futures::Sink<Item>`
             `Box<S>` implements `dfir_rs::futures::Sink<Item>`
             `BufferUnordered<S>` implements `dfir_rs::futures::Sink<Item>`
             `Buffered<S>` implements `dfir_rs::futures::Sink<Item>`
             `Fanout<Si1, Si2>` implements `dfir_rs::futures::Sink<Item>`
             `FlatMapUnordered<St, U, F>` implements `dfir_rs::futures::Sink<_Item>`
             `FlattenSink<Fut, Si>` implements `dfir_rs::futures::Sink<_Item>`
           and $N others
note: required for `Shape` to implement `DemuxEnumSink<(Pin<&mut impl dfir_rs::futures::Sink<(f64,), Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<(f64, f64), Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<(u32,), Error = Infallible>>)>`
  --> tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:5:14
   |
5  |     #[derive(DemuxEnum)]
   |              ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
6  |     enum Shape {
   |          ^^^^^
   = note: required for `dfir_rs::compiled::push::DemuxEnum<(Pin<&mut impl dfir_rs::futures::Sink<(f64,), Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<(f64, f64), Error = Infallible>>, Pin<&mut impl dfir_rs::futures::Sink<(u32,), Error = Infallible>>), Shape>` to implement `dfir_rs::futures::Sink<Shape>`
note: required by a bound in `dfir_rs::compiled::push::DemuxEnum::<Outputs, Item>::new`
  --> src/compiled/push/demux_enum.rs
   |
   |     pub fn new(outputs: Outputs) -> Self
   |            --- required by a bound in this associated function
   |     where
   |         Self: Sink<Item>,
   |               ^^^^^^^^^^ required by this bound in `DemuxEnum::<Outputs, Item>::new`
   = note: this error originates in the derive macro `DemuxEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
